--- a/cloud/template/.env.example
+++ b/cloud/template/.env.example
@@ -1,22 +1,21 @@
 # DocFlow Cloud - Environment Configuration
 # 
-# Copy this file to .env and fill in your values:
+# Copy this file to .env and fill in your value:
 #   cp .env.example .env
 # 
 # IMPORTANT: Never commit .env to git!
 #
-# HOW TO LOAD THESE VALUES:
+# HOW TO LOAD THIS VALUE:
 # ─────────────────────────
 # Option A (Recommended): Use direnv
 #   1. Install direnv: brew install direnv
 #   2. Add to ~/.zshrc: eval "$(direnv hook zsh)"
 #   3. Create .envrc file: echo "dotenv" > .envrc
 #   4. Allow it: direnv allow
-#   → Values auto-load when you cd into the project!
+#   → Value auto-loads when you cd into the project!
 #
 # Option B: Add to shell profile (~/.zshrc)
 #   export LINEAR_API_KEY="your_key_here"
-#   export LINEAR_TEAM_ID="your_team_id"
 #
 # Option C: Export manually before opening Cursor
 #   source .env && cursor .
@@ -30,14 +29,6 @@
 LINEAR_API_KEY=
 
 # ===========================================
-# REQUIRED: Linear Team ID  
-# ===========================================
-# Get from: Linear → Settings → Teams → [Your Team]
-# Or from URL: linear.app/team/[TEAM_ID]/...
-# Or from URL: linear.app/[TEAM_KEY]/... (the short key like "stride")
-LINEAR_TEAM_ID=
-
-# ===========================================
 # OPTIONAL: Figma Access Token
 # ===========================================
 # Get from: Figma → Settings → Personal Access Tokens
@@ -45,7 +36,9 @@ LINEAR_TEAM_ID=
 FIGMA_ACCESS_TOKEN=
 
 # ===========================================
-# NOTE: Project ID is NOT stored here
+# NOTE: Team ID and Project ID are discovered automatically
 # ===========================================
-# The project ID is stored in .docflow.json (not a secret)
-# Run /docflow-setup and the agent will help you select a project
+# Run /docflow-setup and the agent will:
+# 1. Query your Linear teams (you select one)
+# 2. Query projects in that team (you select one)
+# 3. Save both IDs to .docflow.json
