Refactor DocFlow installation and configuration for enhanced usability and flexibility
- Updated `docflow-install.sh` to check for both new and existing configuration files, transitioning from `.docflow.json` to a new structured `.docflow/config.json` for improved clarity.
- Introduced a customizable content folder name during installation, allowing users to define where project context and knowledge are stored.
- Enhanced documentation within the installation script to guide users through the new configuration structure and content folder options.
- Updated README and setup guides to reflect changes in configuration management and folder structure, ensuring users have clear instructions for setup and usage.
- Overall improvements aim to streamline the installation process and enhance user experience with clearer configuration management.

--- a/cloud/template/.docflow/config.json
+++ b/cloud/template/.docflow/config.json
@@ -1,7 +1,8 @@
 {
-  "docflow": {
-    "version": "3.0.0",
-    "sourceRepo": "github.com/strideUX/docflow-template"
+  "version": "3.0.0",
+  "sourceRepo": "github.com/strideUX/docflow-template",
+  "paths": {
+    "content": "docflow"
   },
   "provider": {
     "type": "linear",
