Update DocFlow to version 4.0 and enhance installation script
- Bumped version numbers in `docflow-install.sh`, `.docflow/config.json`, and `.docflow/version` to 4.0.
- Updated README to reflect changes in framework configuration, including the addition of rules and scripts directories.
- Enhanced the installation script to support a new folder-based rules structure for cloud mode, improving organization of workflow rules.
- Added new rules and scripts to the installation process, ensuring comprehensive setup for users.
- Improved output messages in the installation script for better clarity during the installation process.

--- a/cloud/template/.env.example
+++ b/cloud/template/.env.example
@@ -41,4 +41,4 @@ FIGMA_ACCESS_TOKEN=
 # Run /docflow-setup and the agent will:
 # 1. Query your Linear teams (you select one)
 # 2. Query projects in that team (you select one)
-# 3. Save both IDs to .docflow.json
+# 3. Save both IDs to .docflow/config.json
