Enhance AI Labor Estimation in DocFlow
- Updated `manifest.json` to preserve additional AI labor configuration keys during updates.
- Introduced new AI labor configuration in `.docflow/config.json`, including thresholds and provider rates for Claude and GPT models.
- Added AI effort estimation skill documentation in `.docflow/skills/ai-labor-estimate/SKILL.md`, detailing calculation methods and usage.
- Created `provider-costs.md` to provide up-to-date pricing for AI providers.
- Updated issue templates for bugs and features to include AI effort estimate sections for better tracking and calibration of AI usage.

--- a/cloud/manifest.json
+++ b/cloud/manifest.json
@@ -71,7 +71,7 @@
       "description": "Files where specific keys are preserved during update",
       "files": {
         ".docflow/config.json": {
-          "preserve_keys": ["provider.teamId", "provider.projectId", "provider.defaultMilestoneId", "paths.content", "designSystem"]
+          "preserve_keys": ["provider.teamId", "provider.projectId", "provider.defaultMilestoneId", "paths.content", "designSystem", "aiLabor.defaultProvider", "aiLabor.thresholds", "aiLabor.providerRates"]
         }
       }
     },
@@ -142,6 +142,7 @@
           "status-summary.sh"
         ],
         "skills": {
+          "ai-labor-estimate": ["SKILL.md", "provider-costs.md"],
           "docflow-commands": ["SKILL.md"],
           "linear-workflow": ["SKILL.md"],
           "spec-templates": ["SKILL.md"],
@@ -175,4 +176,5 @@
     }
   }
 }
+
 
