Add new rules and scripts for enhanced DocFlow functionality
- Updated `manifest.json` to include new rules and scripts for the DocFlow system, specifically adding `docflow-always` and associated scripts for improved workflow consistency.
- Introduced `always.md` to define deterministic rules and comment templates that must be followed during task management.
- Created new scripts: `activate-issue.sh`, `transition-issue.sh`, and `wrap-session.sh` to streamline issue activation, state transitions, and session wrapping processes.
- Enhanced existing documentation in `core.md`, `implementation-agent.md`, and `pm-agent.md` to reference the new rules and scripts, ensuring comprehensive guidance for users.

--- a/cloud/manifest.json
+++ b/cloud/manifest.json
@@ -14,6 +14,7 @@
         ".docflow/skills",
         ".docflow/templates",
         ".cursor/rules/docflow-core",
+        ".cursor/rules/docflow-always",
         ".cursor/rules/pm-agent",
         ".cursor/rules/implementation-agent",
         ".cursor/rules/qe-agent",
@@ -116,6 +117,7 @@
       ],
       ".cursor/rules": {
         "docflow-core": ["RULE.md"],
+        "docflow-always": ["RULE.md"],
         "pm-agent": ["RULE.md"],
         "implementation-agent": ["RULE.md"],
         "qe-agent": ["RULE.md"],
@@ -127,6 +129,7 @@
       },
       ".docflow": {
         "rules": [
+          "always.md",
           "core.md",
           "designer-agent.md",
           "figma-integration.md",
@@ -137,9 +140,12 @@
           "session-awareness.md"
         ],
         "scripts": [
+          "activate-issue.sh",
           "session-context.sh",
           "stale-check.sh",
-          "status-summary.sh"
+          "status-summary.sh",
+          "transition-issue.sh",
+          "wrap-session.sh"
         ],
         "skills": {
           "ai-labor-estimate": ["SKILL.md", "provider-costs.md"],
