Update DocFlow to version 4.6.0 with process governance refinement and AI Labor Estimation opt-in
- Incremented version to 4.6.0 in relevant files, including `manifest.json` and `.docflow/version`.
- Refined process governance by separating mandatory workflow rules from optional features.
- Made AI Labor Estimation an opt-in feature, disabled by default, with updated documentation in `SKILL.md`.
- Cleaned up `always.md` to focus solely on non-negotiable process governance rules.
- Updated configuration defaults in `.docflow/config.json` to reflect the new AI Labor settings.
- Added migration file `migrations/4.6.0.json` to document changes and provide upgrade notes for users.

--- a/cloud/template/.docflow/config.json
+++ b/cloud/template/.docflow/config.json
@@ -1,5 +1,5 @@
 {
-  "version": "4.4.0",
+  "version": "4.6.0",
   "sourceRepo": "github.com/strideUX/docflow-template",
   "paths": {
     "content": "docflow"
@@ -24,7 +24,7 @@
   },
   "designSystem": null,
   "aiLabor": {
-    "enabled": true,
+    "enabled": false,
     "defaultProvider": "claude-sonnet-4",
     "thresholds": {
       "warnTokens": 200000,
