Update DocFlow to version 4.7.0 with multi-project support and consolidated workflow agent
- Incremented version to 4.7.0 in relevant files, including `version` and `config.json`.
- Introduced multi-project support with a new `workspace.activeProjects` array for managing multiple active projects.
- Added product identity configuration (name, labelId, icon) for consistent branding during project creation.
- Merged existing agent rules (pm-agent, implementation-agent, qe-agent) into a single `workflow-agent.md` file, maintaining clear sections for PM, Implementation, and QE roles.
- Updated commands and documentation to reflect changes in project handling and workflow processes.
- Added a new `/new-project` command for streamlined project creation with automatic product labeling.
- Updated migration file `migrations/4.7.0.json` to document changes and provide upgrade notes for users.

--- a/cloud/template/.docflow/config.json
+++ b/cloud/template/.docflow/config.json
@@ -1,14 +1,21 @@
 {
-  "version": "4.6.0",
+  "version": "4.7.0",
   "sourceRepo": "github.com/strideUX/docflow-template",
   "paths": {
     "content": "docflow"
   },
   "provider": {
     "type": "linear",
-    "teamId": null,
-    "projectId": null,
-    "defaultMilestoneId": null
+    "teamId": null
+  },
+  "workspace": {
+    "activeProjects": [],
+    "defaultMilestoneId": null,
+    "product": {
+      "name": null,
+      "labelId": null,
+      "icon": null
+    }
   },
   "statusMapping": {
     "BACKLOG": "Backlog",
