Enhance product configuration in docflow-install.sh for version 4.7.0
- Added support for product color and status mapping in the workspace configuration.
- Updated the installation script to prompt users for product identity details, including name, label ID, icon, and color.
- Modified related documentation to reflect the inclusion of product color in project creation.
- Ensured backward compatibility by preserving existing configuration during migrations.

--- a/cloud/template/.docflow/config.json
+++ b/cloud/template/.docflow/config.json
@@ -14,7 +14,8 @@
     "product": {
       "name": null,
       "labelId": null,
-      "icon": null
+      "icon": null,
+      "color": null
     }
   },
   "statusMapping": {
