Refactor product identity configuration in DocFlow for version 4.7.0
- Changed `labelId` to `labelIds` in the product configuration to support multiple labels.
- Updated installation and configuration scripts to handle the new `labelIds` array.
- Enhanced documentation to reflect changes in product identity handling, including updates to README and command templates.
- Implemented migration logic to transition from the old `labelId` to the new `labelIds` format, ensuring backward compatibility.
- Adjusted commands for creating new projects to apply multiple labels as configured.

--- a/cloud/template/.docflow/config.json
+++ b/cloud/template/.docflow/config.json
@@ -13,7 +13,7 @@
     "defaultMilestoneId": null,
     "product": {
       "name": null,
-      "labelId": null,
+      "labelIds": [],
       "icon": null,
       "color": null
     }
